fix: use align-content: center for lesson number

--- a/frontend/src/pages/LessonList.css
+++ b/frontend/src/pages/LessonList.css
@@ -36,7 +36,7 @@
 
 .lesson-number {
   display: flex;
-  align-items: center;
+  align-content: center;
   justify-content: center;
   width: 40px;
   height: 40px;
